--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "midi-tokenizers"
+name = "midi_tokenizers"
 version = "0.0.1"
 authors = [
   { name="Wojciech Matejuk", email="wmatejuk14@gmail.com" },
