--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,12 @@ dependencies = [
 ]
 [project.urls]
 Homepage = "https://github.com/Nospoko/midi-quantizers"
+
+[tool.setuptools]
+packages = [
+"quantizers",
+"object_generators",
+"midi_tokenizers",
+"midi_trainable_tokenizers",
+"artifacts",
+]
