--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 ]
 dependencies = [
   "datasets~=2.17.1",
+  "tokenizers>=0.15.2",
   "fortepyan>=0.2.8",
   "numpy~=1.26.3",
   "pandas~=2.1.4",
