--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "midi_tokenizers"
-version = "1.2.1"
+version = "2.0"
 authors = [
   { name="Wojciech Matejuk", email="wmatejuk14@gmail.com" },
   { name = "algrtm", email = "office@algrtm.com" }
@@ -19,7 +19,7 @@ classifiers = [
 dependencies = [
   "datasets~=2.17.1",
   "tokenizers>=0.15.2",
-  "fortepyan>=0.2.8",
+  "fortepyan>=0.4.2",
   "numpy~=1.26.3",
   "pandas~=2.1.4",
   "PyYAML~=6.0.1",
@@ -27,11 +27,5 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/Nospoko/midi-tokenizers"
 
-[tool.setuptools]
-packages = [
-"midi_quantizers",
-"midi_tokenizers_generation",
-"midi_tokenizers",
-"midi_trainable_tokenizers",
-"midi_quantization_artifacts",
-]
+[tool.setuptools.packages.find]
+include = ["midi_tokenizers*"]
