--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "midi_tokenizers"
 version = "2.0"
 authors = [
   { name="Wojciech Matejuk", email="wmatejuk14@gmail.com" },
-  { name = "algrtm", email = "office@algrtm.com" }
+  { name = "EPR Labs", email = "tomek@epr-labs.com" }
 ]
 description = "Package with MIDI tokenizers and quantizers."
 readme = "README.md"
